News UAT/force-app/main/default/objects/BLND_DFTT_Document__c/BLND_DFTT_Document__c.object-meta.xml
<CustomObject>
    <label>TableTop Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TableTop Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>