News UAT/force-app/main/default/objects/BLND_DFTT_Document__c/fields/BLND_Flag1__c.field-meta.xml
<CustomField>
    <fullName>BLND_Flag1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag1</label>
    <type>Checkbox</type>
</CustomField>