News UAT/force-app/main/default/objects/BLND_DFTT_Document__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
    <fullName>BLND_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Snapshot</fullName>
            </value>
            <value>
                <fullName>Webpage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>